--- a/web/css/app.css
+++ b/web/css/app.css
@@ -1,27 +1,10 @@
 
-.fade-hide, .fade-show {
-    -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-    -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-    -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-    transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-}
-
-.fade-hide {
-    opacity:1;
-}
-.fade-hide.fade-hide-active {
-    opacity:0;
-}
-
-.fade-show {
-    opacity:0;
-}
-.fade-show.fade-show-active {
-    opacity:1;
+body {
+    background-color: #fafafa;
 }
 
 .jumbotron {
-    padding: 1.5em;
+    padding: 1.em;
     background-color: #42f2f7;
     font-family: 'Leckerli One', cursive;
 }
