--- a/web/css/app.css
+++ b/web/css/app.css
@@ -9,6 +9,11 @@ body {
     font-family: 'Leckerli One', cursive;
 }
 
+.albumart {
+    width: 100%;
+    height: auto;
+}
+
 .scrollable {
     height: auto;
     max-height: 250px;
